# scikit-omikuji

./: .gitignore  Makefile  README.md  README.txt  base_omikuji_config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  quality.yml  release.yml
docs/: api_reference.md  conf.py  ensemble.rst  index.md  index.rst  installation.md  metrics.rst  parameters.md  usage.md
notebooks/: check-tfidf.py  run_omikuji_dataset.py
omikuji/: Cargo.toml  setup.py
omikuji/python-wrapper/omikuji/: __init__.py
omikuji/src/: data.rs
skomikuji/: __init__.py
skomikuji/data/parsers/: svmlight.py
skomikuji/metrics/: metrics.py  xc.py
skomikuji/models/: skwrapper.py
src/skomikuji/: __init__.py  cli.py  sparse.py  utils.py
src/skomikuji/data/: dataset.py
src/skomikuji/data/parsers/: xc.py
src/skomikuji/ensemble/: __init__.py  _omikuji.py
src/skomikuji/metrics/: __init__.py  _metrics.py  _scorers.py  _xc_metrics.py  metrics.py  xc.py
src/skomikuji/models/: __init__.py  _estimators.py  skwrapper.py
tests/: test-runeurlex.py  test-skomikuji.py  test_skomikuji.py
