[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "skomikuji"
version = "0.3.1"
description = "A Python wrapper supporting sparse input matrices for multilabel classification in extreme settings."
authors = ["Carlo Nicolini <c.nicolini@ipazia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Click = "*"
rich = "*"
tabulate = "*"
numba = "*"
scikit-learn = "*"
pandas = "*"
pyarrow = "*"
scipy = "*"
PyYaml = "*"
omikuji = { path = "./omikuji" }
sphinx = "^7.1.2"
sphinx-autobuild = "^2021.3.14"
pydata-sphinx-theme = "^0.14.1"
sphinx-autodoc-typehints=="^2.4.4"
myst-parser = "^2.0.0"


[tool.dev-dependencies]
pytest = "*"
jupyterlab = "*"
matplotlib = "*"

[tool.ruff]
# max line length for black
line-length = 88
target-version = "py38"
exclude=[
    ".git",
    "__pycache__",
    "dist",
]


[tool.poetry.scripts]
skomikuji-cli = 'skomikuji.cli:main'
