[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "skomikuji"
version = "0.3.1"
requires-python = ">=3.10"
description = "A Python wrapper supporting sparse input matrices for multilabel classification in extreme settings."
authors = [{ name = "Carlo Nicolini", email = "c.nicolini@ipazia.com" }]
dependencies = [
    "typer",
    "rich",
    "tabulate",
    "numba",
    "scikit-learn",
    "pandas",
    "pyarrow",
    "scipy",
    "PyYaml",
    "omikuji",
]

[project.scripts]
skomikuji-cli = "skomikuji.cli:app"

[tool.uv.sources]
omikuji = { path = "./omikuji" }

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest",
    "jupyterlab",
    "matplotlib"
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
filterwarnings = [
    'ignore:configuration option "asyncio_default_fixture_loop_scope" is unset',
]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["D"]